# coco

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  README_CN.md  install.sh  pyproject.toml
apps/autoresearch/: SKILL.md
apps/personality/: SKILL.md
doc/: app-server-zero-legacy-migration-plan.md  architecture.md  coco-cutover-triage.md  message-handling.md  multi-machine-setup.md  telegram-bot-features.md  topic-architecture.md
plans/: multi-machine-controller.md
scripts/: restart.sh
skills/coco-delivery/: SKILL.md
skills/looper/: SKILL.md
src/coco/: __init__.py  admin.py  agent_rpc.py  agent_runtime.py  app_cli.py  bootstrap.py  bot.py  cluster_rpc.py  codex_app_server.py  command_cli.py  config.py  controller_rpc.py  controller_runtime.py  main.py  monitor_state.py  node_registry.py  runtime_capabilities.py  session.py  session_monitor.py  skills.py  telegram_memory.py  telemetry.py  terminal_parser.py  topic_cli.py  transcript_parser.py  transcription.py  tts.py  tts_runtime.py  utils.py
tests/: conftest.py
tests/coco/: conftest.py  test_admin.py  test_agent_rpc.py  test_agent_runtime.py  test_allowed_users.py  test_app_cli.py  test_app_server_approvals.py  test_app_server_notifications.py  test_approvals.py  test_apps_autoresearch_flow.py  test_apps_looper_callbacks.py  test_audio_transcription.py  test_autoresearch.py  test_autoresearch_external.py  test_bootstrap.py  test_cluster_rpc.py  test_coco_command.py  test_codex_app_server.py  test_command_cli.py  test_config.py  test_controller_rpc.py  test_fast_command.py  (+60 more)
(+23 files in other folders)
